<resources>
    <string name="app_name">Mean Calculator</string>
    <string name="name">Imię:</string>
    <string name="lastName">Nazwisko:</string>
    <string name="grades">Oceny:</string>
    <string name="button">Oceny</string>
    <string name="nameInput">Imię</string>
    <string name="lastNameInput">Nazwisko</string>
    <string name="gradesInput">Wpisz liczbę ocen (5–15)</string>
    <string name="nameWarning">Imię nie może być puste</string>
    <string name="lastNameWarning">Nazwisko nie może być puste</string>
    <string name="gradesWarning">Pole oceny nie może być puste</string>
    <string name="gradesNumberWarning">Podaj liczbę ocen w przedziale od 5 do 15</string>
    <string name="gradeName">TextView</string>
    <string name="twoGrade">2</string>
    <string name="threeGrade">3</string>
    <string name="fourGrade">4</string>
    <string name="fiveGrade">5</string>
    <string name="countButton">Oblicz średnią</string>
    <string name="successMessage">Super :)</string>
    <string name="failureMessage">Tym razem nie poszło :(</string>
    <string name="successExitMessage">Gratulacje! Otrzymujesz zaliczenie!</string>
    <string name="failureExitMessage">Wysyłam podanie o zaliczenie warunkowe</string>
    <string name="meanMessage">\"Twoja średnia to \"</string>
    <string-array name="gradeTable">
        <item>Fiz.</item>
        <item>Mat.</item>
        <item>PP</item>
        <item>TPI</item>
        <item>Alg.</item>
        <item>PRiR</item>
        <item>Bd</item>
        <item>Wf</item>
        <item>Ang.</item>
        <item>El.</item>
        <item>Mikro.</item>
        <item>TC</item>
        <item>PZ</item>
        <item>SR</item>
        <item>BSI</item>
    </string-array>
</resources>